--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,6 @@
 
        "browser_action": {
 	   "default_title": "Old Tabs",
-	   "default_popup": "sidebar/sidebar.html"
+	   "default_popup": "oldtab.html"
        }
 }
