--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,11 @@
        "browser_action": {
 	   "default_title": "Old Tabs",
 	   "default_popup": "oldtab.html"
+       },
+
+       "background": { 
+           "scripts": ["background.js"],
+	   "persistent": true
        }
+
 }
