--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
        },
 
        "background": { 
-           "scripts": ["background.js"],
+           "scripts": [  "functions.js", "background.js" ],
 	   "persistent": true
        }
 
